--- a/app/views/feeds/show.xml.slim
+++ b/app/views/feeds/show.xml.slim
@@ -5,7 +5,7 @@ rss version="2.0"
       = @feed.name
     description RSS 2.0 for #{@feed.name} data.
     link
-      = link_to @feed.slug
+      = link_to @feed
     lastBuildDate
       = @feed.updated_at
     pubDate
