--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,71 +1,72 @@
-header.navbar.navbar-default role="banner"
+nav.navbar.navbar-default
+  .container-fluid
 
-  .navbar-header
-    button.navbar-toggle type="button" data-toggle="collapse" data-target="#navbar-collapse-1"
-      span.sr-only Toggle navigation
-      span.icon-bar
-      span.icon-bar
-      span.icon-bar
-  
-    / =
-    a.navbar-brand href="#{root_url}"
-      = image_tag('logo/icon-inverse-128x128.png', width: 16, style: 'display: inline')
-      |  BitTorious
-  
-  
-  nav.collapse.navbar-collapse#navbar-collapse-1
-  
-  
-    ul.nav.navbar-nav
-      - if user_signed_in?
-        li
-          = link_to('Dashboard', dashboard_path)
+    .navbar-header
+       button.navbar-toggle type="button" data-toggle="collapse" data-target="#navbar-collapse-1"
+         span.sr-only Toggle navigation
+         span.icon-bar
+         span.icon-bar
+         span.icon-bar
     
-      / We want this menu visible to both logged-in users and visitors
-      li.dropdown
-        a.dropdown-toggle data-toggle="dropdown"
-          | Learn
-          b.caret
-        ul.dropdown-menu role="menu"
-            li = link_to 'Getting Started Guide', getting_started_path
-            li = link_to 'System Concepts', concepts_path
-            li = link_to 'Deployment Options', deployment_path
-            li = link_to 'FAQ', faq_path
-            / # li = link_to 'Volunteer Client', volunteer_path
-            li class="divider"
-            li = link_to 'Bug Reports', 'https://github.com/preston/bittorious/issues'
-            li = link_to 'Feature Requests', 'https://github.com/preston/bittorious/issues'
-            li = link_to 'Source Code', 'https://github.com/preston/bittorious'
-            li class="divider"
-            li = link_to 'Legal', legal_path
+       / =
+       a.navbar-brand href="#{root_url}"
+         = image_tag('logo/icon-inverse-128x128.png', width: 16, style: 'display: inline')
+         |  BitTorious
+    
+    
+    div.collapse.navbar-collapse#navbar-collapse-1
+    
+    
+       ul.nav.navbar-nav
+         - if user_signed_in?
+           li
+             = link_to('Dashboard', dashboard_path)
+       
+         / We want this menu visible to both logged-in users and visitors
+         li.dropdown
+           a.dropdown-toggle data-toggle="dropdown"
+             | Learn
+             b.caret
+           ul.dropdown-menu role="menu"
+               li = link_to 'Getting Started Guide', getting_started_path
+               li = link_to 'System Concepts', concepts_path
+               li = link_to 'Deployment Options', deployment_path
+               li = link_to 'FAQ', faq_path
+               / # li = link_to 'Volunteer Client', volunteer_path
+               li class="divider"
+               li = link_to 'Bug Reports', 'https://github.com/preston/bittorious/issues'
+               li = link_to 'Feature Requests', 'https://github.com/preston/bittorious/issues'
+               li = link_to 'Source Code', 'https://github.com/preston/bittorious'
+               li class="divider"
+               li = link_to 'Legal', legal_path
 
-    ul.nav.navbar-nav.navbar-right
-      - if user_signed_in?
+       ul.nav.navbar-nav.navbar-right
+         - if user_signed_in?
 
-        - if current_user.admin
-          li.dropdown
-            a.dropdown-toggle data-toggle="dropdown"
-              | Admin
-              b class="caret"
-            ul.dropdown-menu
-              li
-                = link_to 'View network status.', status_path
-              li
-                = link_to 'Manage users.', users_path
+           - if current_user.admin
+             li.dropdown
+               a.dropdown-toggle data-toggle="dropdown"
+                 | Admin
+                 b class="caret"
+               ul.dropdown-menu
+                 li
+                   = link_to 'View network status.', status_path
+                 li
+                   = link_to 'Manage users.', users_path
 
-        li
-          a href="#{edit_user_registration_path}"
-            img src="#{gravatar_image_url(current_user.email, filetype: :png, rating: 'pg', size: 20, secure: true)}"
-            |  
-            = current_user.email
-        li = link_to('Logout', destroy_user_session_path, :method=>'delete')
-      - else
-        li
-          = link_to('Request Account', new_user_registration_path)
-        li
-          = link_to 'Login', new_user_session_path
+           li
+             a href="#{edit_user_registration_path}"
+               img src="#{gravatar_image_url(current_user.email, filetype: :png, rating: 'pg', size: 20, secure: true)}"
+               |  
+               = current_user.email
+           li = link_to('Logout', destroy_user_session_path, :method=>'delete')
+         - else
+           li
+             = link_to('Request Account', new_user_registration_path)
+           li
+             = link_to 'Login', new_user_session_path
 
-    / -if params[:action] == 'dashboard'            
-    / form.navbar-form.navbar-right#search_form role="search"
-      .form-group
-        input.form-control id="search_query" placeholder="search"
+       / -if params[:action] == 'dashboard'            
+       / form.navbar-form.navbar-right#search_form role="search"
+         .form-group
+           input.form-control id="search_query" placeholder="search"
