--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -5,35 +5,41 @@
       = t('.title', :resource => resource_class.model_name.human , :default => 'Edit #{resource_name.to_s.humanize}')
   .panel-body
     = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-      .form-group
-        = f.label :name
-        = f.text_field :name, class: "form-control", required: true
-      .form-group
-        = f.label :email
-        = f.text_field :email, class: "form-control", required: true
-      .form-group
-        = f.label :password
-        i
-          | (
-          = t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it")
-          | )
-        br
-        = f.password_field :password, :autocomplete => "off", class: "form-control"
-      .form-group
-        = f.label :password_confirmation
-        br
-        = f.password_field :password_confirmation, class: "form-control"
-      .form-group
-        = f.label :current_password
-        i
-          | (
-          = t('.we_need_your_current_password_to_confirm_your_changes', :default => 'we need your current password to confirm your changes')
-          | )
-        = f.password_field :current_password, class: "form-control"
-      = f.submit t('.update', :default => "Update"), class: "btn btn-primary"
+	  .row
+	    .col-md-6
+          .form-group
+            = f.label :name
+            = f.text_field :name, class: "form-control", required: true
+          .form-group
+            = f.label :email
+            = f.text_field :email, class: "form-control", required: true
+          .form-group
+	      	= f.label :authentication_token
+            = f.text_field :authentication_token, class: 'form-control', readonly: true
+		.col-md-6
+          .form-group
+            = f.label :password
+            i
+              | (
+              = t('.leave_blank_if_you_don_t_want_to_change_it', :default => "leave blank if you don't want to change it")
+              | )
+            br
+            = f.password_field :password, :autocomplete => "off", class: "form-control"
+          .form-group
+            = f.label :password_confirmation
+            br
+            = f.password_field :password_confirmation, class: "form-control"
+          .form-group
+            = f.label :current_password
+            = f.password_field :current_password, class: "form-control"
+			p.help-block
+              | (
+              = t('.we_need_your_current_password_to_confirm_your_changes', default: 'we need your current password to confirm your changes')
+              | )
+          = f.submit t('.update', :default => "Update"), class: "btn btn-primary"
+
 p
   = t('.unhappy', :default => 'Unhappy')
   | ? 
   = link_to t('.cancel_my_account', :default => "Cancel my account"), registration_path(resource_name), :data => { :confirm => t('.are_you_sure', :default => "Are you sure?") }, :method => :delete
   | .
-
