Performance enhancements and bug fixes.

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -46,7 +46,8 @@ nav.navbar.navbar-default
            - if current_user.admin
              li.dropdown
                a.dropdown-toggle data-toggle="dropdown"
-                 | Admin
+			     span.glyphicon.glyphicon-cog
+                 |  System
                  b class="caret"
                ul.dropdown-menu
                  li
