--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -14,21 +14,11 @@
 		}
 	}
 
-
-	// .jumbotron:hover {
-	// 	box-shadow: 0 60px 40px rgba(0,0,0,1), 0 0px 40px #eee inset;
-	// }
-	//
-	// .jumbotron {
-	// 	background: image-url('textures/ricepaper/ricepaper.png') repeat;
-	// 	box-shadow: 0 20px 20px rgba(0,0,0,.6), 0 0px 80px #ccc inset;
-	// 	border: 1px solid #ccc;
-	// 	-webkit-transition:	all .5s linear;
-	// 	-moz-transition:		all .5s linear;
-	// 	-o-transition:			all .5s linear;
-	// 	transition:					all .5s linear;
-	// }
-
+	iframe {
+		width: 100%;
+		height: 800px;
+		border: none;
+	}
 	section {
 
 		.col-md-4 {
